manifest/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: actix-ingress
  namespace: cloudns
spec:
  ingressClassName: nginx
  rules:
    - host: "actix-app.cloud.ru"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: actix-internal-service
                port:
                  number: 80
    # - host: actix-app.cloud.ru
    #   http:
    #     paths:
    #       - path: /
    #         backend:
    #           service:
    #             name: actix-internal-service
    #             port:
    #               number: 80
